# rtPerfLog

./: .gitignore  CMakeLists.txt  README.md
docs/: logger.md
include/: logger.h
src/: logger.c  loggerMem.h
test/: CMakeLists.txt  test.c
